<resources>
    <!-- Global -->
    <string name="app_name">Cognebus</string>
    <string name="delete">delete</string>
    <string name="delete_content_description">delete</string>
    <string name="selected_counter">%1$d selected</string>
    <string name="select_all">Select All</string>
    <string name="select_all_content_description">Select All</string>
    <string name="go_back_navigation_icon_content_description">Go back.</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="repetition_on">Repetition On</string>
    <string name="repetition_on_content_description">Repetition On</string>
    <string name="repetition_off">Repetition Off</string>
    <string name="repetition_off_content_description">Repetition Off</string>
    <string name="rename">Rename</string>

    <!-- Flashcard -->
    <string name="image_html_tag_template"> &lt;img src=\"%d\" width=\"100%%\"&gt; </string>
    <string name="flashcard_pager_fragment_insert_image_from_camera_button_content_description">Take picture.</string>
    <string name="flashcard_pager_fragment_insert_image_from_gallery_button_content_description">Insert image.</string>
    <string name="flashcard_question_fragment_top_app_bar_title">Question</string>
    <string name="flashcard_question_fragment_question_text_field_label">Question text</string>
    <string name="flashcard_answer_fragment_top_app_bar_title">Answer</string>
    <string name="flashcard_answer_fragment_answer_text_field_label">Answer text</string>
    <string name="flashcard_question_top_app_bar_move_to_answer_title">Go to answer.</string>
    <string name="flashcard_question_top_app_bar_move_to_answer_content_description">Go to answer.</string>
    <string name="flashcard_answer_navigation_icon_content_description">Go to question.</string>
    <string name="flashcard_answer_top_app_bar_save_flashcard_title">SAVE</string>
    <string name="flashcard_answer_top_app_bar_save_flashcard_content_description">Save flashcard.</string>
    <string name="flashcard_question_fragment_question_text_empty_field_error">Empty field!</string>
    <string name="flashcard_answer_fragment_answer_text_empty_field_error">Empty field!</string>
    <string name="dollar_sign_alert_title">To use $ in flashcard you need to write it like \\$</string>
    <string name="dollar_sign_alert_ok">OK</string>
    <string name="dollar_sign_alert_dont_show_again">Don\'t show again</string>
    <string name="flashcard_top_app_bar_preview">Preview</string>
    <string name="flashcard_top_app_bar_preview_content_description">Preview</string>
    <string name="flashcard_top_app_bar_disable_preview">Disable Preview</string>
    <string name="flashcard_top_app_bar_disable_preview_content_description">Disable Preview</string>
    <string name="flashcard_saved_toast">Flashcard saved.</string>

    <!-- Main Menu -->
    <string name="files_button">Flashcards</string>
    <string name="repetition_button">Repetition  %d</string>
    <string name="settings_button">Settings</string>

    <!-- Directories -->
    <string name="directories_title_files">Files</string>
    <string name="directories_create_button_content_description">Create New Folder/File</string>
    <string name="directories_delete_selected_items_dialog">Delete selected items?</string>
    <string name="directories_delete_dialog_negative_button">Cancel</string>
    <string name="directories_delete_dialog_positive_button">Delete</string>
    <string name="directories_folder_button_content_description_template">Folder: %s</string>
    <string name="directories_file_button_content_description_template">File: %s</string>
    <string name="directories_error_copying_to_source_folder_message">Can\'t copy folder into itself.</string>
    <string name="directories_error_copying_to_source_folder_positive_button">OK</string>
    <string name="directories_folder_merge_warning">Some folders will be merged.</string>
    <string name="directories_file_replacement_warning">Some files will be replaced.</string>
    <string name="directories_folder_merge_and_file_replacement_warning">Some folders will be merged and some files replaced.</string>
    <string name="directories_merge_and_replacement_warning_positive_button">Approve</string>
    <string name="directories_merge_and_replacement_warning_negative_button">Cancel</string>

    <!-- Create Folder Or File Selection -->
    <string name="create_file_or_folder_selection_folder_button">Folder</string>
    <string name="create_file_or_folder_selection_file_button">File</string>

    <!-- Create Or Rename Folder Or File -->
    <string name="create_or_rename_folder_or_file_fragment_create_folder_button">Create Folder</string>
    <string name="create_or_rename_folder_or_file_fragment_rename_folder_button">Rename Folder</string>
    <string name="create_or_rename_folder_or_file_fragment_create_file_button">Create File</string>
    <string name="create_or_rename_folder_or_file_fragment_rename_file_button">Rename File</string>
    <string name="create_or_rename_folder_or_file_fragment_invalid_input_error">Invalid input!</string>
    <string name="create_or_rename_folder_or_file_fragment_already_exists_error">Already exists!</string>
    <string name="create_or_rename_folder_or_file_fragment_folder_edit_text_hint">Folder Name</string>
    <string name="create_or_rename_folder_or_file_fragment_file_edit_text_hint">File Name</string>

    <!-- File -->
    <string name="file_fragment_practice_button">Practice %1$d/%2$d</string>
    <string name="file_fragment_add_flashcard_button">Add Flashcard</string>
    <string name="file_fragment_view_flashcards_button">View Flashcards</string>
    <string name="file_fragment_practice_order_dropdown_menu_hint">Practice Order</string>
    <string name="file_fragment_options_label">OPTIONS</string>

    <!-- File && Settings -->
    <string name="file_fragment_enable_html_switch_label">HTML Tags</string>
    <string name="file_fragment_enable_html_switch_subtext">Enables use of HTML tags inside flashcards.</string>
    <string name="file_fragment_repetition_switch_label">Repetition</string>
    <string name="file_fragment_repetition_switch_subtext">Repeat flashcards every 0, 1, 3, 7, 15, 30 days.</string>
    <string name="file_fragment_continue_repetition_switch_label">Continue Repetition</string>
    <string name="file_fragment_continue_repetition_switch_subtext">Continue repeating flashcards after default period.</string>
    <string name="file_fragment_cycle_increment_edit_text_hint">Cycle Increment</string>
    <string name="file_fragment_max_days_per_cycle_edit_text_hint">Max Days Per Cycle</string>
    <string name="file_fragment_cycle_increment_edit_text_invalid_input_error">Invalid input!</string>
    <string name="file_fragment_cycle_increment_edit_text_value_under_error">Value under %1$d!</string>
    <string name="file_fragment_max_days_per_cycle_edit_text_invalid_input_error">Invalid input!</string>
    <string name="file_fragment_max_days_per_cycle_edit_text_value_under_error">Value under %1$d</string>
    <string name="file_fragment_only_practice_enabled_label">Only Practice Enabled</string>
    <string name="file_fragment_only_practice_enabled_subtext">Flashcards set to repetition off won\'t show in practice.</string>

    <!-- Settings -->
    <string name="settings_fragment_default_file_options_label">DEFAULT FILE OPTIONS</string>
    <string name="settings_fragment_flashcard_options_label">FLASHCARD OPTIONS</string>
    <string name="settings_fragment_consecutive_flashcard_creation_switch_label">Consecutive Flashcard Creation</string>
    <string name="settings_fragment_consecutive_flashcard_creation_switch_subtext">After flashcard is created start creating next flashcard.</string>
    <string name="settings_fragment_crop_image_when_added_switch_label">Crop Image When Added</string>
    <string name="settings_fragment_crop_image_when_added_switch_subtext">Open image for cropping when it is added.</string>

    <!-- Practice -->
    <string name="practice_question_fragment_top_app_bar_title">Question %1$d/%2$d</string>
    <string name="practice_question_top_app_bar_move_to_answer_title">Go to answer.</string>
    <string name="practice_question_top_app_bar_move_to_answer_content_description">Go to answer.</string>
    <string name="practice_answer_navigation_icon_content_description">Go to question.</string>
    <string name="practice_answer_fragment_top_app_bar_title">Answer</string>
    <string name="answer_practice_correct_answer_button_text">Finish</string>
    <string name="answer_practice_incorrect_answer_button_text">Skip</string>

    <!-- Flashcards List -->
    <string name="flashcards_list_delete_selected_flashcards_dialog">Delete selected flashcards?</string>
    <string name="flashcards_list_delete_dialog_negative_button">Cancel</string>
    <string name="flashcards_list_delete_dialog_positive_button">Delete</string>

    <!-- fragment_crop_image -->
    <string name="crop_image_top_app_bar_crop_image">CROP</string>
    <string name="crop_image_top_app_bar_crop_image_content_description">Crop image.</string>
    <string name="crop_image_top_app_bar_rotate_image">Rotate</string>
    <string name="crop_image_top_app_bar_rotate_image_content_description">Rotate image.</string>
    <string name="crop_image_dialog_image_not_cropped_message">Unable to crop image.</string>
    <string name="crop_image_dialog_image_not_cropped_positive_button">OK</string>

</resources>
