<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_forever_24"
        android:title="@string/delete"
        android:contentDescription="@string/delete_content_description"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/select_all"
        android:title="@string/select_all"
        android:contentDescription="@string/select_all_content_description"
        app:showAsAction="never" />

    <item
        android:id="@+id/cut"
        android:title="@string/cut"
        android:contentDescription="@string/cut"
        app:showAsAction="never" />

    <item
        android:id="@+id/copy"
        android:title="@string/copy"
        android:contentDescription="@string/copy"
        app:showAsAction="never" />

    <item
        android:id="@+id/rename"
        android:title="@string/rename"
        android:contentDescription="@string/rename"
        app:showAsAction="never" />
</menu>