<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fileFragment"
            type="com.startingground.cognebus.file.FileFragment" />

        <variable
            name="fileViewModel"
            type="com.startingground.cognebus.file.FileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".file.FileFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/top_app_bar_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/file_top_app_bar"
                app:navigationIcon="@drawable/ic_arrow_back_24"
                app:navigationContentDescription="@string/go_back_navigation_icon_content_description"/>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_app_bar_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/practice_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:enabled="@{fileViewModel.numberOfFlashcardsForPractice.second > 0}"
                    android:onClick="@{() -> fileFragment.onPractice()}"
                    tools:text="@string/file_fragment_practice_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/practice_order_dropdown_menu"
                    style="@style/Widget.Cognebus.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:hint="@string/file_fragment_practice_order_dropdown_menu_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/practice_button">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/practice_order_dropdown_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_flashcard_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_huge"
                    android:onClick="@{() -> fileFragment.onAddFlashcard()}"
                    android:text="@string/file_fragment_add_flashcard_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/practice_order_dropdown_menu" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/view_flashcards_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:enabled="@{fileViewModel.fileContainsFlashcards}"
                    android:onClick="@{() -> fileFragment.onViewFlashcards()}"
                    android:text="@string/file_fragment_view_flashcards_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_flashcard_button" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_big"
                    android:background="@color/grey_700"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_flashcards_button" />

                <TextView
                    android:id="@+id/options_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:text="@string/file_fragment_options_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider" />

                <com.startingground.cognebus.customviews.SwitchCognebus
                    android:id="@+id/enable_html_switch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_big"
                    android:layout_marginTop="@dimen/margin_small"
                    android:checked="@{fileViewModel.file.enableHtml}"
                    android:onClick="@{(view) -> fileViewModel.onEnableHtmlChanged(view)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/options_label"
                    app:summaryText="@string/file_fragment_enable_html_switch_subtext"
                    app:titleText="@string/file_fragment_enable_html_switch_label" />

                <com.startingground.cognebus.customviews.SwitchCognebus
                    android:id="@+id/only_practice_enabled"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_big"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:checked="@{fileViewModel.file.onlyPracticeEnabled}"
                    android:onClick="@{(view) -> fileViewModel.onOnlyPracticeEnabledChanged(view)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/enable_html_switch"
                    app:summaryText="@string/file_fragment_only_practice_enabled_subtext"
                    app:titleText="@string/file_fragment_only_practice_enabled_label" />

                <com.startingground.cognebus.customviews.SwitchCognebus
                    android:id="@+id/repetition_switch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_big"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:checked="@{fileViewModel.file.repetitionEnabled}"
                    android:onClick="@{(view) -> fileViewModel.onRepetitionChanged(view)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/only_practice_enabled"
                    app:summaryText="@string/file_fragment_repetition_switch_subtext"
                    app:titleText="@string/file_fragment_repetition_switch_label" />

                <com.startingground.cognebus.customviews.SwitchCognebus
                    android:id="@+id/continue_repetition_switch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_big"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:checked="@{fileViewModel.file.continueRepetitionAfterDefaultPeriod}"
                    android:enabled="@{fileViewModel.file.repetitionEnabled}"
                    android:onClick="@{(view) -> fileViewModel.onContinueRepetitionChanged(view)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/repetition_switch"
                    app:summaryText="@string/file_fragment_continue_repetition_switch_subtext"
                    app:titleText="@string/file_fragment_continue_repetition_switch_label" />

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_normal"
                    app:flexWrap="wrap"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/continue_repetition_switch">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/cycle_increment_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:enabled="@{fileViewModel.file.continueRepetitionAfterDefaultPeriod &amp;&amp; fileViewModel.file.repetitionEnabled}"
                        android:hint="@string/file_fragment_cycle_increment_edit_text_hint"
                        app:errorEnabled="true"
                        app:layout_flexGrow="1"
                        app:layout_minWidth="160dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned"
                            android:maxLength="9"
                            android:text="@{Integer.toString(fileViewModel.file.cycleIncrement)}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/max_days_per_cycle_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:enabled="@{fileViewModel.file.continueRepetitionAfterDefaultPeriod &amp;&amp; fileViewModel.file.repetitionEnabled}"
                        android:hint="@string/file_fragment_max_days_per_cycle_edit_text_hint"
                        app:errorEnabled="true"
                        app:layout_flexGrow="1"
                        app:layout_minWidth="175dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberSigned"
                            android:maxLength="9"
                            android:text="@{Integer.toString(fileViewModel.file.maxDaysPerCycle)}" />

                    </com.google.android.material.textfield.TextInputLayout>

                </com.google.android.flexbox.FlexboxLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>